--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.1.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.20"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "watch": "nodemon app.js"
   },
   "repository": {
     "type": "git",
